--- a/styles.css
+++ b/styles.css
@@ -18,5 +18,18 @@ p {
   border: 5px dashed gray;
 }
 button {
-  color: green
+  color: green;
+  background-color: lightcoral;
+  border: none;
+  padding: 5px;
+  font-weight: bold;
+  border-radius: 10px;
+}
+input {
+  border-radius: 5px;
+  border: none;
+  padding: 4px;
+}
+label {
+  font-family: tahoma;
 }
